# markdown-template-preprocessor

./: Cargo.toml
.github/workflows/: clippy.yml  prebuilt-binary.yml
src/: main.rs
