[package]
name = "markdown-template-preprocessor"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
itertools = "0.10.3"
regex = "1.6.0"
strum = { version = "0.24.1", features = ["derive"] }
