[package]
name = "markdown-template-preprocessor"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
itertools = "0.12.1"
regex = "1.10.2"
strum = { version = "0.26.0", features = ["derive"] }
